fixed form on mobile

--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ input:-webkit-autofill:active {
 
   .contact{
     grid-template-columns: 1fr;
+    margin-left: 15px;
   }
 
   .message, .email, .button{
